--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ main{
     list-style-type: none;
 }
 
-#container_tarefas ul li{
+.tarefa_item{
     background-color: var(--tarefa);
     color: var(--text_tarefa);
     padding: 10px;
@@ -117,7 +117,7 @@ main{
     font-size: 1.2rem;
 }
 
-#btns {
+.btns {
     border-left: 1px solid var(--fundo);
     padding-left: 12px;
     display: flex;
@@ -143,5 +143,13 @@ main{
 #rodape a:hover{
     text-decoration: underline;
     color: var(--btn_add);
+}
+
+.concluida{
+    text-decoration: line-through;
+    opacity: 0.6;
+    color: #777;
+    background-color: #f3f3f3;
+    transition: .3s ease;
 }
 
