Correção de lógica
Corrigi a lógica que causou conflito entre branchs e refatorei o script para que guardasse o estado da tarefa no armazenamento local.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,6 @@ main{
 }
 
 #modal::backdrop {
-    background: rgba(0, 0, 0, 0.5); /* escurecimento do overlay */
-    backdrop-filter: blur(3px);     /* opcional: deixar mais elegante */
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
 }
-
